# robot-arm

./: CMakeLists.txt  client.py  compute_ik.py  grasp_listener.py  gripper.py  listener.py  package.xml  params.yaml  plan_trajectory.py  print_torques.ino  server.py  subscriber.py
action/: Move.action
launch/: follow_arm.launch  move_arm.launch
