<?xml version="1.0"?>
<package>
  <name>arduino</name>
  <version>0.0.0</version>
  <description>
    Package for sending commands to robot arm through Arduino
  </description>

  <maintainer email="ethanbro@seas.upenn.edu">Ethan Brooks</maintainer>
  <maintainer email="witho@seas.upenn.edu">Brad Thompson</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/lobachevzky/robot-arm</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
